--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 Hello Kickstart Coding Fall 2018!!
+
+<p>The tags we will learn now are p (paragraph tags) and h1-h6 (header tags)</p>
+
+<p>I am paragraph</p>
+
+<p>I
+  
+  am
+  
+  another
+  
+  paragraph...note that it doesn't start a new line
+  
+</p>
+
+<h1>1. Biggest text</h1>
+<p>Some more paragraph</p>
+
+<h2>2. Big text</p>
+<p>and another paragraph</p>
+
+<h3>3. Small text</p>
+<p>last line of paragraph for final</p>
