--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ Hello Kickstart Coding Fall 2018!!
 <h1>1. Biggest text</h1>
 <p>Some more paragraph</p>
 
-<h2>2. Big text</p>
+<h2>2. Big text</h2>
 <p>and another paragraph</p>
 
-<h3>3. Small text</p>
+<h3>3. Small text</h3>
 <p>last line of paragraph for final</p>
