--- a/index.html
+++ b/index.html
@@ -22,3 +22,5 @@ Hello Kickstart Coding Fall 2018!!
 
 <h3>3. Small text</h3>
 <p>last line of paragraph for final</p>
+
+<p class="first-class" Hello everyone</p>
