--- a/index.html
+++ b/index.html
@@ -1,57 +1,16 @@
-Hello Kickstart Coding Fall 2018!!
+<p>Hello World</p>
 
-<p>The tags we will learn now are p (paragraph tags) and h1-h6 (header tags)</p>
+<h1>Biggesst text</h1>
+<p><strong>Love</strong></p>
+<h2>Bigger text</h2> etc to h6
+<p><em>Nice</em></p>
+<br>
+<h6>small text</h6>
+<p>cool</p>
+</br>
 
-<p>I am paragraph</p>
+<a href="http://google.com/">go to Google</a>
 
-<p>I
-  
-  am
-  
-  another
-  
-  paragraph...note that it doesn't start a new line
-  
-</p>
+<img src="https://i.pinimg.com/564x/60/1b/9c/601b9c0c40ad468ea31a5d3df0babd9b.jpg: /> An photo
+          
 
-<h1>1. Biggest text</h1>
-<p>Some more paragraph</p>
-
-<h2>2. Big text</h2>
-<p>and another paragraph</p>
-
-<h3>3. Small text</h3>
-<p>last line of paragraph for final</p>
-
-<p class="first-class"> Hello everyone</p>
-
-
-<h1>Biggest</h1>
-<h2>Bigger</h2> ...
-<h6>Smallest</h6>
-
-<p> <strong>This</strong> page is <em>stylish</em>! </p>
-<p>My poem<br /> is poetic</p>
-
-<p>Above the fold</p>
-<hr />
-<p>Below the fold</p>
-
-<p>Here is a link to <a href="http://google.com/">Google</a></p>
-
-<h3>Grocery list:</h3>
-<ul>
-    <li>Apples</li>
-    <li>Oranges</li>
-    <li>Bananas</li>
-</ul>
-
-<table>
-    <thead> <tr> <th>Name</th> <th>Type</th> <th>Number</th> </tr> </thead>
-    <tbody>
-        <tr> <td>Pikachu</td> <td>Electric</td> <td>25</td> </tr>
-        <tr> <td>Jigglypuff</td> <td>Normal</td> <td>39</td> </tr>
-    </tbody>
-</table>
-
-<img title="I love kittens!" src="https://i.imgur.com/xjkDKOB.jpg" />
