--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <a href="http://google.com/">go to Google</a>
 
 <br/>
-<img src="https://i.pinimg.com/564x/60/1b/9c/601b9c0c40ad468ea31a5d3df0babd9b.jpg" />An photo
+<img src="https://i.pinimg.com/564x/60/1b/9c/601b9c0c40ad468ea31a5d3df0babd9b.jpg:" />An photo
           
 
